--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,15 @@ services:
     container_name: whatsapp-api-mongodb
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      # Credenciales directas para MongoDB
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password123
+      MONGO_INITDB_DATABASE: whatsapp_api
     ports:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
+      - ./mongo-init:/docker-entrypoint-initdb.d
     networks:
       - whatsapp-network
 
@@ -24,13 +27,13 @@ services:
     depends_on:
       - mongodb
     ports:
-      - "3100:3000"  # Exponiendo el backend en el puerto 3100
+      - "3100:3000"
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - MONGODB_URI=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongodb:27017/whatsapp-api?authSource=admin
-      - JWT_SECRET=${JWT_SECRET}
+      - JWT_SECRET=ebf8d398c7a6e25ab8c1a72390bd76e8f1a392059d2ec3b3
       - SESSION_PATH=/app/sessions
+      - MONGODB_URI=mongodb://admin:password123@mongodb:27017/whatsapp_api?authSource=admin
     volumes:
       - whatsapp-sessions:/app/sessions
     networks:
@@ -46,7 +49,7 @@ services:
     depends_on:
       - backend
     ports:
-      - "8082:80"  # Exponiendo el frontend en el puerto 8080
+      - "8082:80"
     networks:
       - whatsapp-network
       - proxy
