--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # API proxy con timeout extendido y mejor manejo de errores
+    # API proxy con timeout extendido
     location /api/ {
         proxy_pass http://backend:3000/api/;
         proxy_http_version 1.1;
@@ -22,13 +22,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
 
-        # Configuraciones para evitar timeouts
-        proxy_connect_timeout 180s;
-        proxy_send_timeout 180s;
-        proxy_read_timeout 180s;
-
-        # Manejo de errores
-        proxy_intercept_errors on;
-        error_page 500 502 503 504 /50x.html;
+        # Timeouts extendidos
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 120s;
     }
 }
