--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.16.0"
